--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LAB5-EV3-SEARCHOBJECT</name>
+	<name>DPM-TEAM-14-FINAL-PROJECT</name>
 	<comment></comment>
 	<projects>
 	</projects>
